<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HotRaga</string>
    <string name="permission_read_ext_storage_denied" tools:keep="@string/permission_read_ext_storage_denied">Read external storage permission was denied. Please consider granting it in order to upload image!</string>
    <string name="permission_read_ext_storage_never_askagain" tools:keep="@string/permission_read_ext_storage_never_askagain">Read external storage permission was denied with never ask again.</string>
    <string name="permission_read_ext_storage_rationale" tools:keep="@string/permission_read_ext_storage_rationale">Read external storage permission is needed to show the select images.</string>
    <string name="permission_write_ext_storage_denied" tools:keep="@string/permission_write_ext_storage_denied">Write external storage permission was denied. Please consider granting it in order to download files!</string>
    <string name="permission_write_ext_storage_never_askagain" tools:keep="@string/permission_write_ext_storage_never_askagain">Write external storage permission was denied with never ask again.</string>
    <string name="permission_write_ext_storage_rationale" tools:keep="@string/permission_write_ext_storage_rationale">Write external storage permission is needed to show the download files.</string>
    <string name="permission_read_contact_denied" tools:keep="@string/permission_read_contact_denied">Read contacts permission was denied. Please consider granting it in order to send contact information!</string>
    <string name="permission_read_contact_never_askagain" tools:keep="@string/permission_read_contact_never_askagain">Read contacts permission was denied with never ask again.</string>
    <string name="permission_read_contact_rationale" tools:keep="@string/permission_read_contact_rationale">Read contacts permission is needed to send contact information.</string>
    <string name="button_allow" tools:keep="@string/button_allow">Allow</string>
    <string name="button_deny" tools:keep="@string/button_deny">Deny</string>
    <string name="authority">com.dreams.chat.fileprovider</string>
    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
    <string name="file_not_found">File not found!\nFile is either Moved, Deleted or Renamed.</string>
    <string name="media">Media</string>
    <string name="audio">Audio</string>
    <string name="docs">Docs</string>
    <string name="view_all">View all</string>
    <string name="empty_text_chat_list">Your chats appear here\nStart chatting by selecting a user.</string>
    <string name="empty_group_chat_list">Your group chats appear here\nStart chatting by selecting a group.</string>
    <string name="empty_text_status_list">Your status appear here\nStart uploading your status here.</string>
    <string name="empty_log_call_list">Your call logs appear here\nStart by selecting a user.</string>
    <string name="no_groups">You have no groups\nCreate a new group to begin with.</string>
    <string name="invitation_text">Hey, I found this ChatApp!, cool chatting application, come join me </string>
    <string name="invite_friends">Invite friends…</string>
    <string name="message_otp">We will send you a OTP message. Standard rates may apply.</string>
    <string name="t1"><![CDATA[Education & Webinars]]></string>
    <string name="t2"><![CDATA[Property & Investments]]></string>
    <string name="t3"><![CDATA[Insurance & Finance]]></string>
    <string name="t4"><![CDATA[Technology & Hardware]]></string>
    <string name="t5"><![CDATA[Home & Appliances]]></string>
    <string name="t6"><![CDATA[Lifestyle & Travel]]></string>
    <string name="t7"><![CDATA[Cars & Bikes]]></string>
    <string name="t8"><![CDATA[Babies & Kids]]></string>
    <string name="t9"><![CDATA[Health & Wellness]]></string>
    <string name="t10"><![CDATA[Family & Seniors]]></string>
    <string name="t11"><![CDATA[Fashion & Sports]]></string>
    <string name="t12"><![CDATA[Books & Reads]]></string>
    <string name="t13"><![CDATA[Arts & Gift]]></string>
    <string name="t14"><![CDATA[Jobs & Internship]]></string>
    <string name="t15"><![CDATA[Business Opportunities]]></string>
    <string name="t16"><![CDATA[Food & Entertainment]]></string>
    <string name="cat_msg"><![CDATA[I Would Like to receive Information from the Following......]]></string>
</resources>