<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CategoryActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Choose category"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark_cat"
        android:padding="30dp">

        <TextView
            android:id="@+id/catCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="+0"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"


            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/submit_button"
        android:fillViewport="true">

    <LinearLayout
        android:id="@+id/linear_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/cat_msg"
                android:textColor="@color/colorBlack"
                android:background="@drawable/rounded_corner"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/t1"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/t1"
                android:textColor="@color/colorBlack"

                android:background="@drawable/rounded_corner"
                />

            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"

                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/t2"
                android:textColor="@color/colorBlack"
                android:background="@drawable/rounded_corner"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t3"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t3"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t4"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t5"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t5"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/t6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t6"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t7"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t7"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/t8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t8"
                android:textColor="@color/colorBlack" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t9"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/t10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t10"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/t13"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t13"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/t14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t14"
                android:textColor="@color/colorBlack" />

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/t11"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t11"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/t12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t12"
                android:textColor="@color/colorBlack" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t15"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t15"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/t16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/t16"
                android:textColor="@color/colorBlack" />

        </LinearLayout>




    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark_cat"
        android:text="Submit"
        android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>